Fix display top line on mobile version in header

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -59,6 +59,16 @@
     position: relative;
     display: flex;
     align-items: center;
+    &:first-child {
+      &::before {
+        position: absolute;
+        top: -32px;
+        left: -8px;
+        width: calc(100% + 16px);
+        content: '';
+        border: 1px solid #e0e0e0;
+      }
+    }
     &:not(:last-child) {
       padding-bottom: 30px;
       margin-bottom: 30px;
@@ -135,10 +145,6 @@
       &::before {
         left: 0;
       }
-      &::after {
-        visibility: visible;
-        opacity: 1;
-      }
       & ~ .dark-background {
         &::after {
           visibility: visible;
@@ -156,18 +162,6 @@
       content: '';
       background-color: #fff;
       transition: left 0.6s ease 0s;
-    }
-    &::after {
-      position: fixed;
-      top: $heightHeaderInner;
-      left: 0;
-      z-index: 105;
-      width: $OpenMenuWidth;
-      visibility: hidden;
-      content: '';
-      border: 1px solid #e0e0e0;
-      opacity: 0;
-      transition: visibility 3s ease 0s, opacity 3s ease 0s;
     }
   }
   .dark-background {
